bindings/c/whiteout_casc.h

/* SPDX-License-Identifier: BSD-3-Clause */
/* Copyright (c) 2026 Fernando Sahmkow */
/* AUTOGENERATED by tools/codegen/emit_c.py — do not edit. */
/* Regenerate via:  python -m tools.codegen.codegen casc --backend c-header */

#ifndef WHITEOUT_CASC_H
#define WHITEOUT_CASC_H

#include "whiteout_c_common.h"

#ifdef __cplusplus
extern "C" {
#endif

/* ── Enums ─────────────────────────────────────────────────── */

typedef enum {
    whiteout_casc_RootFormat_Unknown,
    whiteout_casc_RootFormat_Wow,
    whiteout_casc_RootFormat_WowTvfs,
    whiteout_casc_RootFormat_Diablo3,
    whiteout_casc_RootFormat_Diablo4,
    whiteout_casc_RootFormat_Tvfs,
    whiteout_casc_RootFormat_Mndx,
    whiteout_casc_RootFormat_Overwatch,
    whiteout_casc_RootFormat_Agent,
} whiteout_casc_RootFormat;

typedef enum {
    whiteout_casc_FileIdHint_None,
    whiteout_casc_FileIdHint_Meta,
    whiteout_casc_FileIdHint_Payload,
    whiteout_casc_FileIdHint_Paylow,
    whiteout_casc_FileIdHint_Paymed,
} whiteout_casc_FileIdHint;

/* ── Opaque handles ───────────────────────────────────────── */

typedef struct whiteout_CascCreateOptions whiteout_CascCreateOptions;
typedef struct whiteout_CascWriteOptions whiteout_CascWriteOptions;
typedef struct whiteout_CascStorage whiteout_CascStorage;
typedef struct whiteout_CascStorageWritable whiteout_CascStorageWritable;

/* ── CascCreateOptions ─────────────────────────────────────────────── */

/* Options for creating a new empty CASC storage. */
whiteout_CascCreateOptions* whiteout_casc_CascCreateOptions_new(void);
void whiteout_casc_CascCreateOptions_delete(whiteout_CascCreateOptions* self);

whiteout_CString whiteout_casc_CascCreateOptions_get_product(const whiteout_CascCreateOptions* self);
void whiteout_casc_CascCreateOptions_set_product(whiteout_CascCreateOptions* self, const char* value);
whiteout_CString whiteout_casc_CascCreateOptions_get_version(const whiteout_CascCreateOptions* self);
void whiteout_casc_CascCreateOptions_set_version(whiteout_CascCreateOptions* self, const char* value);
/* 1 GB. */
uint32_t whiteout_casc_CascCreateOptions_get_archiveMaxSize(const whiteout_CascCreateOptions* self);
void whiteout_casc_CascCreateOptions_set_archiveMaxSize(whiteout_CascCreateOptions* self, uint32_t value);
/* 64 KB. */
uint32_t whiteout_casc_CascCreateOptions_get_blteFrameSize(const whiteout_CascCreateOptions* self);
void whiteout_casc_CascCreateOptions_set_blteFrameSize(whiteout_CascCreateOptions* self, uint32_t value);
int32_t whiteout_casc_CascCreateOptions_get_rootFormat(const whiteout_CascCreateOptions* self);
void whiteout_casc_CascCreateOptions_set_rootFormat(whiteout_CascCreateOptions* self, int32_t value);

/* ── CascWriteOptions ─────────────────────────────────────────────── */

/* Options for writing a file into a CASC storage. */
whiteout_CascWriteOptions* whiteout_casc_CascWriteOptions_new(void);
void whiteout_casc_CascWriteOptions_delete(whiteout_CascWriteOptions* self);

uint32_t whiteout_casc_CascWriteOptions_get_localeFlags(const whiteout_CascWriteOptions* self);
void whiteout_casc_CascWriteOptions_set_localeFlags(whiteout_CascWriteOptions* self, uint32_t value);
uint32_t whiteout_casc_CascWriteOptions_get_contentFlags(const whiteout_CascWriteOptions* self);
void whiteout_casc_CascWriteOptions_set_contentFlags(whiteout_CascWriteOptions* self, uint32_t value);
int32_t whiteout_casc_CascWriteOptions_get_compress(const whiteout_CascWriteOptions* self);
void whiteout_casc_CascWriteOptions_set_compress(whiteout_CascWriteOptions* self, int32_t value);

/* ── CascStorage ─────────────────────────────────────────────── */

/* Unified read-only CASC storage (local disk or CDN) */
/*  */
/* Storage is the primary entry point for reading CASC archives. Use `open()` for local disk, `openOnline()` for CDN-backed access. The same public read API works identically regardless of backing store. */
/*  */
/* All public methods are thread-safe: read operations acquire a shared lock. */
/*  */
/* Uses the PImpl (Pointer to Implementation) idiom to hide internals. */
/*  */
/* @see StorageWritable for write + persist operations. */
void whiteout_casc_CascStorage_delete(whiteout_CascStorage* self);

/* Open an existing local CASC storage. @param path Path to the game's top-level directory (containing .build.info) or its Data subdirectory. @param pool Optional WorkerPool for parallel I/O (non-owning). @return A valid Storage, or std::nullopt on failure. */
struct whiteout_CascStorage* whiteout_casc_CascStorage_open(const char* path, void* pool);
/* @overload Open with locale mask. */
struct whiteout_CascStorage* whiteout_casc_CascStorage_open_path_localeMask_pool(const char* path, uint32_t localeMask, void* pool);
/* Release all resources and invalidate the storage. */
void whiteout_casc_CascStorage_close(whiteout_CascStorage* self);
/* @return True if this storage reads from local disk. */
int32_t whiteout_casc_CascStorage_isLocal(const whiteout_CascStorage* self);
/* @return True if this storage reads from CDN. */
int32_t whiteout_casc_CascStorage_isOnline(const whiteout_CascStorage* self);
/* @return True if this storage has a write overlay (StorageWritable). */
int32_t whiteout_casc_CascStorage_isWritable(const whiteout_CascStorage* self);
/* @return The root manifest format, or RootFormat::Unknown. */
int32_t whiteout_casc_CascStorage_rootFormat(const whiteout_CascStorage* self);
/* @return File contents, or std::nullopt if the path is not found. */
whiteout_Bytes whiteout_casc_CascStorage_readFile(const whiteout_CascStorage* self, const char* cascPath);
/* @overload Read a file by path with locale and open flags. */
whiteout_Bytes whiteout_casc_CascStorage_readFile_cascPath_localeFlags_openFlags(const whiteout_CascStorage* self, const char* cascPath, uint32_t localeFlags, uint32_t openFlags);
/* @overload Read a file by WoW-style FileDataId. */
whiteout_Bytes whiteout_casc_CascStorage_readFile_fileId_hint(const whiteout_CascStorage* self, int32_t fileId, int32_t hint);
/* @overload Read a file by FileDataId with locale and open flags. */
whiteout_Bytes whiteout_casc_CascStorage_readFile_fileId_localeFlags_openFlags_hint(const whiteout_CascStorage* self, int32_t fileId, uint32_t localeFlags, uint32_t openFlags, int32_t hint);
/* @return True if the path resolves to a known file. */
int32_t whiteout_casc_CascStorage_fileExists(const whiteout_CascStorage* self, const char* cascPath);
/* @overload Check existence by FileDataId. */
int32_t whiteout_casc_CascStorage_fileExists_fileId_hint(const whiteout_CascStorage* self, int32_t fileId, int32_t hint);
/* @return All known file paths. */
size_t whiteout_casc_CascStorage_listFiles_count(const whiteout_CascStorage* self);
whiteout_CString whiteout_casc_CascStorage_listFiles_at(const whiteout_CascStorage* self, size_t index);
size_t whiteout_casc_CascStorage_listFilesPrefix_count(const whiteout_CascStorage* self, const char* prefix);
whiteout_CString whiteout_casc_CascStorage_listFilesPrefix_at(const whiteout_CascStorage* self, const char* prefix, size_t index);
uint64_t whiteout_casc_CascStorage_listFilesPrefix_size_at(const whiteout_CascStorage* self, const char* prefix, size_t index);
/* Import encryption keys from a formatted string (one per line). */
int32_t whiteout_casc_CascStorage_importKeysFromString(whiteout_CascStorage* self, const char* keyList);
/* Import encryption keys from a file. */
int32_t whiteout_casc_CascStorage_importKeysFromFile(whiteout_CascStorage* self, const char* keyFilePath);
/* Clear the in-memory decoded-data cache (container cache). */
void whiteout_casc_CascStorage_flushCache(whiteout_CascStorage* self);
/* Force every deferred load (encoding, root, VFS, index files, orphan bitvector) to resolve. Idempotent. */
int32_t whiteout_casc_CascStorage_prefetch(whiteout_CascStorage* self);
/* @return Last error code (thread-local). */
uint32_t whiteout_casc_CascStorage_lastError(void);

/* ── CascStorageWritable ─────────────────────────────────────────────── */

/* Writable CASC storage (read + write + save) */
/*  */
/* Inherits all read operations from Storage. Adds write overlay and persist-to-disk support. */
/*  */
/* Only local-backed storages can be writable (CDN is read-only). */
/*  */
/* extends=whiteout::storages::casc::Storage */
void whiteout_casc_CascStorageWritable_delete(whiteout_CascStorageWritable* self);

/* Create a new empty storage in memory. */
/*  */
/* No file is written to disk until save() is called. */
/*  */
/* @param opts Creation options (product name, version, root format). @param pool Optional WorkerPool for parallel I/O. @return A valid empty StorageWritable ready for writeFile() calls. */
struct whiteout_CascStorageWritable* whiteout_casc_CascStorageWritable_create(struct whiteout_CascCreateOptions* opts, void* pool);
/* Write a file by path. */
/*  */
/* Data is stored in an in-memory overlay until save() is called. */
/*  */
/* @param path CASC path for the new or updated file. @param data File contents. @param opts Write options (locale, content flags, compression). @return True on success. */
int32_t whiteout_casc_CascStorageWritable_writeFile(whiteout_CascStorageWritable* self, const char* path, const uint8_t* data, size_t data_size, struct whiteout_CascWriteOptions* opts);
/* @overload Write a file by FileDataId. */
int32_t whiteout_casc_CascStorageWritable_writeFile_fileId_data_opts_hint(whiteout_CascStorageWritable* self, int32_t fileId, const uint8_t* data, size_t data_size, struct whiteout_CascWriteOptions* opts, int32_t hint);
/* Mark a file for deletion (effective on next save). */
int32_t whiteout_casc_CascStorageWritable_deleteFile(whiteout_CascStorageWritable* self, const char* path);
/* @overload */
int32_t whiteout_casc_CascStorageWritable_deleteFile_fileId_hint(whiteout_CascStorageWritable* self, int32_t fileId, int32_t hint);
/* Persist all pending changes to disk (writes to the original location). */
int32_t whiteout_casc_CascStorageWritable_save(whiteout_CascStorageWritable* self);
/* @overload Persist to a specific output path. */
int32_t whiteout_casc_CascStorageWritable_save_path(whiteout_CascStorageWritable* self, const char* path);


#ifdef __cplusplus
} /* extern "C" */
#endif

#endif /* WHITEOUT_CASC_H */