bindings/csharp/Whiteout/Casc/NativeMethods.Casc.cs

// SPDX-License-Identifier: BSD-3-Clause
// Copyright (c) 2026 Fernando Sahmkow
// AUTOGENERATED by tools/codegen/emit_csharp.py — DO NOT EDIT.

using System.Runtime.InteropServices;

namespace Whiteout.Casc.Internal;

internal static partial class NativeMethods
{
    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_casc_CascCreateOptions_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_casc_CascCreateOptions_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_casc_CascCreateOptions_get_product(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_casc_CascCreateOptions_set_product(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_casc_CascCreateOptions_get_version(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_casc_CascCreateOptions_set_version(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_casc_CascCreateOptions_get_archiveMaxSize(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_casc_CascCreateOptions_set_archiveMaxSize(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_casc_CascCreateOptions_get_blteFrameSize(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_casc_CascCreateOptions_set_blteFrameSize(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_casc_CascCreateOptions_get_rootFormat(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_casc_CascCreateOptions_set_rootFormat(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_casc_CascWriteOptions_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_casc_CascWriteOptions_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_casc_CascWriteOptions_get_localeFlags(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_casc_CascWriteOptions_set_localeFlags(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_casc_CascWriteOptions_get_contentFlags(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_casc_CascWriteOptions_set_contentFlags(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_casc_CascWriteOptions_get_compress(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_casc_CascWriteOptions_set_compress(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_casc_CascStorage_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_casc_CascStorage_open([MarshalAs(UnmanagedType.LPUTF8Str)] string path, IntPtr pool);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_casc_CascStorage_open_path_localeMask_pool([MarshalAs(UnmanagedType.LPUTF8Str)] string path, uint localeMask, IntPtr pool);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_casc_CascStorage_close(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_casc_CascStorage_isLocal(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_casc_CascStorage_isOnline(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_casc_CascStorage_isWritable(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_casc_CascStorage_rootFormat(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeBytes whiteout_casc_CascStorage_readFile(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string cascPath);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeBytes whiteout_casc_CascStorage_readFile_cascPath_localeFlags_openFlags(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string cascPath, uint localeFlags, uint openFlags);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeBytes whiteout_casc_CascStorage_readFile_fileId_hint(IntPtr self, int fileId, int hint);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeBytes whiteout_casc_CascStorage_readFile_fileId_localeFlags_openFlags_hint(IntPtr self, int fileId, uint localeFlags, uint openFlags, int hint);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_casc_CascStorage_fileExists(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string cascPath);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_casc_CascStorage_fileExists_fileId_hint(IntPtr self, int fileId, int hint);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_casc_CascStorage_listFiles_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_casc_CascStorage_listFiles_at(IntPtr self, nuint index);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_casc_CascStorage_listFilesPrefix_count(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string prefix);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_casc_CascStorage_listFilesPrefix_at(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string prefix, nuint index);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial ulong whiteout_casc_CascStorage_listFilesPrefix_size_at(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string prefix, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_casc_CascStorage_importKeysFromString(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string keyList);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_casc_CascStorage_importKeysFromFile(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string keyFilePath);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_casc_CascStorage_flushCache(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_casc_CascStorage_prefetch(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_casc_CascStorage_lastError();


    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_casc_CascStorageWritable_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_casc_CascStorageWritable_create(IntPtr opts, IntPtr pool);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_casc_CascStorageWritable_writeFile(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string path, ReadOnlySpan<byte> data, nuint data_size, IntPtr opts);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_casc_CascStorageWritable_writeFile_fileId_data_opts_hint(IntPtr self, int fileId, ReadOnlySpan<byte> data, nuint data_size, IntPtr opts, int hint);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_casc_CascStorageWritable_deleteFile(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string path);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_casc_CascStorageWritable_deleteFile_fileId_hint(IntPtr self, int fileId, int hint);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_casc_CascStorageWritable_save(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_casc_CascStorageWritable_save_path(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string path);

}
